--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -13,18 +13,39 @@ html {
 
 /* Header Styles */
 header {
-  align-self: center;
-  background-color: cadetblue;
-  color: white;
-  position: relative;
-  top: 1rem;
-  width: 960px;
+  background-image: url(../images/glasses-bg.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 30rem;
+}
+
+header div {
+  display: flex;
+  align-items: center;
+}
+
+nav {
+  margin-right: 1rem;
+}
+
+nav span {
+  padding: 1rem;
 }
 
 .bar {
+  display: flex;
+  align-items: center;
+  background-color: cadetblue;
+  color: white;
   justify-content: space-between;
+  position: relative;
+  top: 1rem;
+  padding: 1rem 0;
 }
 
-.logo, nav {
-  padding: 1rem 2rem;
+.logo {
+  margin-left: 2rem;
+  margin-right: 1rem;
+  height: 1.5rem;
 }
