--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -20,6 +20,7 @@ header {
   height: 30rem;
 }
 
+/* Navigation Bar Styles */
 header div {
   display: flex;
   align-items: center;
@@ -48,4 +49,23 @@ nav span {
   margin-left: 2rem;
   margin-right: 1rem;
   height: 1.5rem;
+}
+
+/* Main Banner Styles */
+#banner {
+  justify-content: flex-end;
+}
+
+h1 {
+  font-size: 2rem;
+  font-weight: bold;
+  line-height: 1.2rem;
+}
+
+.banner {
+  display: inline-block;
+  padding: 1.5rem 5rem;
+  margin-top: 10rem;
+  margin-right: -2rem;
+  background-color: white;
 }
