--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -5,7 +5,7 @@ html {
   font-family: helvetica;
 }
 
-.flex {
+.box {
   display: flex;
   max-width: 960px;
   margin: auto;
@@ -18,6 +18,7 @@ header {
   background-position: center;
   background-size: cover;
   height: 30rem;
+  padding-top: 1rem;
 }
 
 /* Navigation Bar Styles */
@@ -69,12 +70,10 @@ h1 {
 }
 
 /* Services Styles */
-.services {
+.content {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 8rem;
-  margin: 3rem auto;
  }
 
  .services div {
@@ -101,44 +100,14 @@ h1 {
 }
 
 /* Information Styles */
-.infos {
-  display: flex;
-  justify-content: center;
-  /* align-items: flex-start; */
-}
-
-div.info {
-  /* display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center; */
-  text-align: left;
-  width: 35%;
-  margin-bottom: 5rem;
-}
-
-.info p {
-  padding: 1rem 0;
-}
-
-.tittle {
-  max-width: 10rem;
-  background-color: cadetblue;
-  color:white;
-  font-weight: bold;
-  font-size: 1rem;
-  padding: 0.5rem 1.25rem;
-}
-
-
-/* .info {
+.info {
   width: 35%;
   margin-right: 5%;
   margin-bottom: 4rem;
 }
 
 .info p {
-  padding: 1rem 0;
+  padding-top:1rem;
 }
 
 .title {
@@ -147,8 +116,7 @@ div.info {
   background-color: cadetblue;
   font-weight: bold;
   color: white;
-} */
-
+}
 
 /* Footer Styles*/
 footer {
