Working on media queries for tablet.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,5 @@
+/* 1024px 470px */
+
 /* General Styles */
 html {
   font-size: 18px;
@@ -67,6 +69,31 @@ nav span {
 h1 {
   font-size: 2rem;
   font-weight: bold;
+}
+
+@media only screen and (max-width: 1024px) {
+  header {
+    height: 22rem;
+    padding-top: 0;
+  }
+
+  div.box {
+    max-width: 100%;
+  }
+
+  .bar {
+    padding-top: 0;
+  }
+
+  .banner {
+    padding: 0.75rem 4rem;
+    margin-top: 5rem;
+    margin-right: 2rem;
+  }
+
+  .banner h1 {
+    font-size: 1.33rem;
+  }
 }
 
 /* Services Styles */
