--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -102,6 +102,7 @@ h1 {
 @media only screen and (max-width: 470px) {
   header {
     background-position: 20%;
+    height: 17rem;
   }
 
   .menu {
@@ -154,6 +155,19 @@ h1 {
   width: 3.5rem;
 }
 
+@media only screen and (max-width: 470px) {
+  .content {
+    flex-direction: column;
+    margin: 3.77rem auto;
+    align-items: center;
+  }
+
+  .service {
+    font-size: 0.77rem;
+    margin: 1.54rem;
+  }
+}
+
 /* Information Styles */
 .info {
   width: 35%;
@@ -173,6 +187,22 @@ h1 {
   color: white;
 }
 
+@media only screen and (max-width: 470px) {
+  .info {
+    width: 100%;
+    margin-bottom: 4rem;
+  }
+
+  .info .title {
+    text-align: center;
+  }
+
+  .info p {
+    padding: 1rem;
+    font-size: 0.77rem;
+  }
+}
+
 /* Footer Styles*/
 footer {
   background-color: azure;
@@ -188,4 +218,14 @@ footer .logo {
   margin-left: 4rem;
   margin-right: 1rem;
   height: 1.5rem;
+}
+
+@media only screen and (max-width: 470px) {
+  footer {
+    justify-content: center;
+  }
+
+  footer div {
+    display: none;
+  }
 }
