--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -116,7 +116,7 @@ h1 {
   .banner {
     width: 100%;
     padding: 1rem 0;
-    margin-top: 9rem;
+    margin: 9rem auto 0 auto;
     text-align: center;
   }
 
@@ -194,6 +194,7 @@ h1 {
   }
 
   .info .title {
+    width: 100%;
     text-align: center;
   }
 
@@ -225,7 +226,7 @@ footer .logo {
     justify-content: center;
   }
 
-  footer div {
+  footer span {
     display: none;
   }
 }
